--- a/roles/frontend/template/nginx.conf.j2
+++ b/roles/frontend/template/nginx.conf.j2
@@ -47,7 +47,7 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://{{ :8080/; }
+        location /api/catalogue/ { proxy_pass http://{{ CATALOGUE_HOST }}:8080/; }
         location /api/user/ { proxy_pass http://user.vallalas.store:8080/; }
         location /api/cart/ { proxy_pass http://cart.vallalas.store:8080/; }
         location /api/shipping/ { proxy_pass http://shipping.vallalas.store:8080/; }
